--- a/styles.css
+++ b/styles.css
@@ -39,6 +39,13 @@ html, body {
 	}
 	#game {
 		width: 90vw;
+		opacity: 100;
+	}
+	#gameText h2 strong{
+		font-size: 1.25rem;
+	}
+	#gameText h3 strong{
+		font-size: 1.1rem;
 	}
 }
 
@@ -61,6 +68,12 @@ html, body {
 	}
 	#game {
 		width: 80vw;
+	}
+	#gameText h2 strong{
+		font-size: 1.25rem;
+	}
+	#gameText:not(.futureGame) h2 strong{
+		display:none;
 	}
 }
 /* Desktop */
@@ -106,6 +119,9 @@ html, body {
 	#game {
 		height: 70vh;
 	}
+	#gameText:not(.futureGame) h2 strong{
+		display:none;
+	}
 }
 
 .navbar-toggler {
@@ -122,7 +138,21 @@ html, body {
 
 }
 
+#randomPreset {
+	border: 2px solid black;
+	border-radius: 10px;
+	padding: 10px;
+	width: 300px;
+	margin-left: auto;
+	margin-right: auto;
+	text-align: center;
+	margin-top: 25px;
+}
 
+#randomPreset:hover {
+	cursor: default;
+	box-shadow: 0 0 15px black, 0 0 15px #FFFFFF, 0 0 30px black;
+}
 
 #gameImages {
 	display: flex;
